@@ -219,3 +219,9 @@ MIPMIXER_GENRE_GROUPS
 
 MIPMIXER_GENRE_GROUPS_DESC
 	EN	Define a list of genre groups. When filtering by genre only mixer tracks within a track's genre group will be used. (If a track is not in a group, then only mixer tracks that are also not in a group will be used.) Groups are configured as a semi-colon separated list of genre names (e.g. Pop; Dance) with each new group on a new line (empty lines are ignored).
+
+MIPMIXER_HOST
+	EN	MusicIP host
+
+MIPMIXER_HOST_DESC
+	EN	Hostname, or IP address, on which the MusicIP is running.
