@@ -1,6 +1,7 @@
 0.0.5
 -----
 1. Allow configuring genre groups in LMS's settings pages.
+2. Allow configuring host of MusicIP server.
 
 0.0.4
 -----
